syntax = "proto3";

package meteroid.api.components.v1_2;

import "api/pricecomponents/v1_2/models.proto";

message EditPriceComponentRequest {
  string plan_version_id = 1;
  PriceComponent component = 2;
}

message EditPriceComponentResponse {
  PriceComponent component = 1;
}

message CreatePriceComponentRequest {
  string plan_version_id = 1;
  string name = 2;
  Fee fee = 3;
  optional string product_item_id = 4;
}

message CreatePriceComponentResponse {
  PriceComponent component = 1;
}

message RemovePriceComponentRequest {
  string price_component_id = 1;
}

message ListPriceComponentRequest {
  string plan_version_id = 1;
}

message ListPriceComponentResponse {
  repeated PriceComponent components = 1;
}

message EmptyResponse {
}

service PriceComponentsService {
  rpc ListPriceComponents(ListPriceComponentRequest) returns (ListPriceComponentResponse) {}
  rpc CreatePriceComponent(CreatePriceComponentRequest) returns (CreatePriceComponentResponse) {}
  rpc EditPriceComponent(EditPriceComponentRequest) returns (EditPriceComponentResponse) {}
  rpc RemovePriceComponent(RemovePriceComponentRequest) returns (EmptyResponse) {}
}
